--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,4 +1,7 @@
 doctype html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
+html(
+data-props= JSON.stringify(props)
+)
 head
     meta(charset='utf-8')
     style
@@ -6,15 +9,14 @@ head
 
     title= pageTitle
 
-body(class=test)
+body()
 
 
   .page-header-top
       .container
-       
-        h1
-          a(href='#', title='VIGGO - One Page HTML5 Template')
-            span#thing_name(itemprop='name') Welcome to Weather Reporting isomorphic App
+        span#head
+          h1
+             span#thing_name(itemprop='name') Welcome to Weather Reporting isomorphic App
        
 
 
