error handling added

--- a/views/Bootstrap.css
+++ b/views/Bootstrap.css
@@ -103,7 +103,7 @@ body {
 {
 	width: 100%;
     height: 10%;    
-    border: 1px solid green;
+    border: 1px solid #582603;
     background-color: rgba(35, 70, 70, 0.5);
     font-style: oblique;
     text-align: center;
